# conj-gradient-accelerate

./: ClothDPH.hs  Makefile  Test.hs  bug.hs  conj-gradient-accelerate.cabal
scripts/: README  rectangle100100.mesh  rectangle5050.mesh  rectsurface.sh
src/: Cloth.hs  Looptest.hs  Main.hs  Triangular.hs
